--- a/Задача_3/Задача_3.cbp
+++ b/Задача_3/Задача_3.cbp
@@ -33,7 +33,9 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="main.cpp" />
+		<Unit filename="queue.cpp" />
 		<Unit filename="queue.h" />
+		<Unit filename="stack.cpp" />
 		<Unit filename="stack.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
